@@ -23,8 +23,8 @@ Copyright (C) 1994, 1995 Markus Armbruster.
 Copyright (C) 1994, 1995 Graeme W. Wilford. (Wilf.)
 Copyright (C) 1995 Carl Edman.
 Copyright (C) 1996, 1997, 1998, 2000 Fabrizio Polacco.
-Copyright (C) 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010
-              Colin Watson.
+Copyright (C) 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010,
+              2011 Colin Watson.
 Copyright (C) 1984, 1989, 1990, 1991, 1992, 1995, 1996, 1997, 1998, 1999,
               2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009
               Free Software Foundation, Inc.
